# Long-wide-data-convert

./: .gitignore  00_LOCAL_TEST_GUIDE.txt  00_START_HERE_WEB.txt  ALL_DONE.md  CONTRIBUTING.md  DEPLOYMENT.md  GETTING_STARTED.md  LOCAL_TESTING.md  PROJECT_CHECKLIST.md  PROJECT_COMPLETE.txt  QUICK_REFERENCE.md  QUICK_WEB_DEPLOY.txt  README.md  README_CN.md  START_HERE.txt  SUMMARY.md  WEB_DEPLOYMENT.md  WEB_READY.txt  WEB_SUMMARY.md  app.js  app.js.bak  example.py  init_github.bat  init_github.sh  pyproject.toml
.github/workflows/: tests.yml
data_transformer/: __init__.py  cli.py  converter.py
docs/: API.md  QUICKSTART.md
tests/: __init__.py  test_converter.py  test_excel.txt
web/: app.js  index.html  test_tsv_parse.py
